--- a/notebooks/sierraleone-bumbuna.ipynb
+++ b/notebooks/sierraleone-bumbuna.ipynb
@@ -1326,6 +1326,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with the following function we can select highly correlated features\n",
+    "# it will remove the first feature that is correlated with anything other feature\n",
+    "\n",
+    "def correlation(dataset, threshold):\n",
+    "    col_corr = set()  # Set of all the names of correlated columns\n",
+    "    corr_matrix = dataset.corr()\n",
+    "    for i in range(len(corr_matrix.columns)):\n",
+    "        for j in range(i):\n",
+    "            if abs(corr_matrix.iloc[i, j]) > threshold: # we are interested in absolute coeff value\n",
+    "                colname = corr_matrix.columns[i]  # getting the name of column\n",
+    "                col_corr.add(colname)\n",
+    "    return col_corr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_features = correlation(data, 0.3)\n",
+    "len(set(corr_features))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Precipitation'}"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_features"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
